tests/fixtures/invalid/pow_float_int_set.py
# Cannot call pow() with Float, Int, Set[int]
x = pow(1.0, 1, {1, 2, 3})
